# tum-science-hackathon-air2

./: .env.example  .gitignore  FIXES.md  README.md  challenge.md  concept.md  main.py  pyproject.toml
scripts/: kinematics_probe.py  telemetry_probe.py  verify_altitude_render.py  verify_dashboard.py  verify_emergency.py
src/: __init__.py
src/backend/: __init__.py  demo.py
src/backend/agents/: __init__.py  agent.py  communication.py  config.py  fleet.py  messages.py  priority.py  routing.py  state.py
src/backend/server/: __init__.py  app.py  config.py  conflicts.py  connections.py  emergency.py  route_planner.py  schemas.py  slot_scheduler.py  state_service.py  store.py
src/frontend/: Electrx Tower - Clean.dc.html  landing-pads.csv  response-example.json  simulation.js  support.js
